[workspace]
members = ["bencher", "harness", "test-programs/cpi-target", "test-programs/primary"]
resolver = "2"

[workspace.package]
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/buffalojoec/mollusk"
license = "MIT"
edition = "2021"

[workspace.dependencies]
bincode = "1.3.3"
num-format = "0.4.4"
serde_json = "1.0.117"
solana-bpf-loader-program = "2.0.13"
solana-compute-budget = "2.0.13"
solana-logger = "2.0.13"
solana-program = "2.0.13"
solana-program-runtime = "2.0.13"
solana-system-program = "2.0.13"
solana-sdk = "2.0.13"
solana-timings = "2.0.13"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/OliverNChalk/curve25519-dalek", rev = "af1ed144753dfac0ae1e58005688e581a5f2c6b4" }
solana-bpf-loader-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-compute-budget = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-program-runtime = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-sdk = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-system-program = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
solana-timings = { git = "https://github.com/OliverNChalk/agave", rev = "f5fa2ecbaacdbcbbf9ed691e049b2b1c391ad183" }
